--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dependencies:
   path_provider:
   file_picker: ^6.1.1
   syncfusion_flutter_pdfviewer: ^23.2.4
+  dio: ^5.3.4
+  flutter_spinkit: ^5.2.0
+  intl:
+  gradient_borders: ^1.0.0
+  another_flushbar: 
+  shared_preferences: ^2.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
