--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   gradient_borders: ^1.0.0
   another_flushbar: 
   shared_preferences: ^2.2.2
+  jwt_decoder: ^2.0.1
+  share_plus: ^7.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
