--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,14 @@ dependencies:
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
   share_plus: ^7.2.1
+  path:
+  firebase_dynamic_links: ^5.4.5
+  firebase_core: ^2.23.0
+  firebase_analytics: ^10.7.1
+  go_router: ^12.1.1
+  firebase_crashlytics: ^3.4.5
+  animate_do: ^3.1.2
+  gap: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,7 +72,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
