--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   firebase_crashlytics: ^3.4.5
   animate_do: ^3.1.2
   gap: ^3.0.1
+  firebase_storage: 
+  cloud_firestore: 
+  uuid:
 dev_dependencies:
   flutter_test:
     sdk: flutter
