--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   firebase_storage: 
   cloud_firestore: 
   uuid:
+  flutter_file_downloader: ^1.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
