--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   cloud_firestore: 
   uuid:
   flutter_file_downloader: ^1.1.4
+  google_mobile_ads: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
