--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   uuid:
   flutter_file_downloader: ^1.1.4
   google_mobile_ads: ^3.1.0
+  cached_network_image: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
