--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
   flutter_file_downloader: ^1.1.4
   google_mobile_ads: ^3.1.0
   cached_network_image: 
-  
+  modal_progress_hud_nsn: ^0.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
