--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   google_mobile_ads: ^3.1.0
   cached_network_image: 
   modal_progress_hud_nsn: ^0.4.0
+  flutter_rating_bar: ^4.0.1
+  readmore: ^2.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
